# sphinx-godot-docs

./: pyproject.toml
sphinx-godot-docs/: pyproject.toml
