[tool.poetry]
name = "sphinx-godot-docs"
version = "0.1.0"
description = "Document Godot Script files in sphix format"
authors = ["Douglas Webster <douglas.webster2107@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Kivy = {extras = ["base"], version = "^2.0.0"}
kivymd = "^0.104.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
black = "^21.8b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
bandit = "^1.7.0"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
